# tiacad

./: .gitignore  3MF_EXPORT_COMPLETE.md  AUTO_REFERENCES_GUIDE.md  BACKLOG.md  CHANGELOG.md  CODE_QUALITY_AUDIT_2025-11-03.md  CODE_REVIEW_COLOR_PARSER.md  COLOR_SYSTEM_SPEC.md  COLOR_SYSTEM_SUMMARY.md  COLOR_YAML_DESIGN.md  DOCS_CODE_ALIGNMENT_ISSUES.md  EXAMPLES_GUIDE.md  EXPORT_FORMATS_ANALYSIS.md  GLOSSARY.md  KNOWN_LIMITATIONS.md  LICENSE  NAMED_POINTS_GUIDE.md  PROJECT.md  README.md  REFACTORING_SUMMARY.md  REFACTORING_SUMMARY_2025-11-03.md  RELEASE_NOTES_V3.md  ROADMAP.md  TASKS.md  TEST_STATUS.json  TUTORIAL.md  YAML_REFERENCE.md  guitar_hanger_with_holes.stl  mounting_plate.stl  pyproject.toml  render_demos.py  render_grid_demos.py  requirements-lock.txt  requirements.txt  test_combine_approach.py  test_engraving_workarounds.py  test_sweep_fix.py  test_sweep_integration.py  test_sweep_quick.py  test_text_integration.py  (+5 more)
.github/workflows/: example-validation.yml  tests.yml  visual-regression.yml
docs/: ARCHITECTURE_DECISION_V3.md  CLEAN_ARCHITECTURE_PROPOSAL.md  CLI.md  CODE_REVIEW_FOLLOWUPS_2026-04-18.md  CURRENT_STATUS.md  DOCUMENTATION_MAP.md  HULL_OPERATION_IMPLEMENTATION.md  LANGUAGE_IMPROVEMENTS_STATUS.md  MIGRATION_GUIDE_V3.md  OPENSCAD_FEATURE_ANALYSIS.md  README.md  SCHEMA_VALIDATION.md  SIL_INTEGRATION.md  TIACAD_EVOLUTION_ROADMAP.md  V3_IMPLEMENTATION_STATUS.md  notes1.md  notes2.md  notes3.md  notes4.md
docs/architecture/: ARCHITECTURE_DECISION_V3.md  ARCHITECTURE_NEXT_STEPS.md  ARCHITECTURE_REVIEW_2026-04-18.md  CGA_V5_ARCHITECTURE_SPEC.md  CGA_V5_FUTURE_VISION.md  CLEAN_ARCHITECTURE_PROPOSAL.md  OPEN_ISSUES_AND_ARCHITECTURE_DEBT_2026-04-18.md  README.md  SKETCH_ABSTRACTION_DESIGN.md
docs/archive/: ARCHITECTURE_REVIEW_2026-04-18.md  ARCHIVE_SUMMARY.md  CURRENT_STATUS.md  DAG_INCREMENTAL_REBUILD.md  KNOWN_ISSUES.md  LANGUAGE_IMPROVEMENTS_STATUS.md  OPEN_ISSUES_AND_ARCHITECTURE_DEBT_2026-04-18.md  PROJECT_REVIEW_2026-04-17.md  README.md  TESTING_CONFIDENCE_PLAN.md  TIACAD_EVOLUTION_ROADMAP.md  V3_IMPLEMENTATION_STATUS.md
docs/developer/: AI_DEBUG_WORKFLOW.md  API_DEPRECATION_STRATEGY.md  CLI.md  DAG_INCREMENTAL_REBUILD.md  MIGRATION_GUIDE_V3.md  MODEL_VALIDATION.md  README.md  SCHEMA_VALIDATION.md  TERMINOLOGY_GUIDE.md  TESTING_GUIDE.md  TESTING_QUICK_REFERENCE.md  VALIDATION_CASE_STUDY_MOUNTING_HOLES.md  VALIDATION_STRENGTHENING.md
docs/diagrams/: auto-reference-visualization.md  local-frame-offsets.md  operation-categories.md
docs/user/: AUTO_REFERENCES_GUIDE.md  EXAMPLES_GUIDE.md  GLOSSARY.md  README.md  TUTORIAL.md  YAML_REFERENCE.md
examples/: anchors_demo.yaml  auto_references_box_stack.yaml  auto_references_cylinder_assembly.yaml  auto_references_rotation.yaml  auto_references_with_offsets.yaml  awesome_guitar_hanger.yaml  bottle_revolve.yaml  bracket_with_hole.yaml  chamfered_bracket.yaml  color_demo.yaml  color_showcase.yaml  component_import_demo.yaml  dag_test_cycle.yaml  dag_test_simple.yaml  duck_call_insert.yaml  enhanced_metadata_demo.yaml  error_demo.yaml  formats_demo.yaml  guitar_hanger_named_points.3mf  guitar_hanger_named_points.yaml  guitar_hanger_with_holes.yaml  hardware_assembly_demo.yaml  hull_enclosure.yaml  hull_simple.yaml  lego_brick_2x1.yaml  lego_brick_3x1.yaml  mounting_plate_with_bolt_circle.yaml  multi_material_demo.yaml  multi_material_enclosure.yaml  pcb_standoff_assembly.yaml  pipe_sweep.yaml  pipe_sweep_simple.yaml  references_demo.yaml  rounded_mounting_plate.yaml  simple_box.3mf  simple_box.yaml  simple_extrude.yaml  simple_guitar_hanger.stl  simple_guitar_hanger.yaml  text_engraved.yaml  (+15 more)
examples/components/: m3_screw.yaml  m3_washer.yaml  m4_screw.yaml  m5_screw.yaml  m6_bolt.yaml  mounting_bracket.yaml
examples/trust/: SIGNOFF.md  boolean_intersect.yaml  boolean_subtract.yaml  boolean_union.yaml  box_basic.yaml  chamfer_basic.yaml  circular_pattern.yaml  cone_basic.yaml  cylinder_basic.yaml  cylinder_on_plate.yaml  fillet_basic.yaml  hull_spheres.yaml  linear_pattern.yaml  loft_rect_to_circle.yaml  pcb_standoff_assembly.yaml  revolve_180.yaml  revolve_90.yaml  revolve_basic.yaml  revolve_x_axis.yaml  revolve_y_axis.yaml  side_by_side.yaml  sphere_basic.yaml  stacked_boxes.yaml  sweep_basic.yaml  three_part_assembly.yaml
examples/validation/: T0_box.tiacad  T0_cone.tiacad  T0_cylinder.tiacad  T0_polygon.tiacad  T0_sphere.tiacad  T0_torus.tiacad  T1_chamfer.tiacad  T1_difference.tiacad  T1_fillet.tiacad  T1_intersection.tiacad  T1_pattern_linear.tiacad  T1_pattern_polar.tiacad  T1_rotate90.tiacad  T1_translate.tiacad  T1_union_overlap.tiacad  T3_bracket_fillet.tiacad  T3_lego_2x1.tiacad  T3_plate_bolt_circle.tiacad  T3_plate_one_hole.tiacad  T4_bolted_bracket.tiacad  T4_constraint_coaxial.tiacad  T4_constraint_flush.tiacad  T4_constraint_offset.tiacad  T4_constraint_tangent.tiacad  T4_standoff_stack.tiacad  T4_two_boxes_flush.tiacad
output/: bracket_with_hole.stl  chamfered_bracket.stl  color_demo.3mf  multi_material_demo.3mf  pipe_sweep_test.stl  rounded_mounting_plate.stl  simple_extrude.stl
scripts/: audit_terminology.py  generate_golden_steps.py  generate_test_status.py  trust_render.py  trust_signoff.py  update_determinism_goldens.py  validate_examples.py
scripts/migrations/: README.md
tiacad_core/: __init__.py  __main__.py  backend_support.py  cli.py  debug_bundle.py  materials_library.py  part.py  point_resolver.py  selector_resolver.py  sketch.py  spatial_resolver.py  transform_tracker.py  watcher.py
tiacad_core/cli/: __init__.py  _common.py  audit.py  build.py  check.py  debug.py  info.py  measure.py  output.py  parser.py  render.py  validate.py  validate_geometry.py  verify.py  watch.py
tiacad_core/dag/: __init__.py  build_cache.py  graph_builder.py  incremental_builder.py  invalidation_tracker.py  model_graph.py  visualizer.py
tiacad_core/exporters/: __init__.py  threemf_exporter.py
tiacad_core/geometry/: __init__.py  base.py  cadquery_backend.py  mock_backend.py  spatial_references.py
tiacad_core/parser/: __init__.py  appearance_builder.py  (+25 more)
trust_output/: gallery.html
(+160 files in other folders)
