[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tiacad"
version = "3.1.2"
description = "Declarative parametric CAD in YAML - Build 3D models with readable, explicit syntax"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "Semantic Infrastructure Lab Contributors"}
]
keywords = ["cad", "yaml", "parametric-design", "3d-modeling", "cadquery"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Computer Aided Design (CAD)",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
# Floors reflect the tested baseline (Python 3.11+, numpy 2.x, CadQuery 2.8 /
# OCP 7.9) as of 2026-07-10; see requirements.txt for the rationale. Kept in
# sync with requirements.txt.
dependencies = [
    "cadquery>=2.8.0",
    "pyyaml>=6.0.2",
    "simpleeval>=1.0.0",
    "networkx>=3.4",
    "scipy>=1.13.0",
    "numpy>=2.0.0",
    "trimesh>=4.11.0",
    "lib3mf>=2.4.0",
    "pyvista>=0.46.0",
    "Pillow>=11.0.0",
    "watchdog>=6.0.0",
    "jsonschema>=4.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.5.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
    "ruff>=0.11.0",
]

[project.urls]
Homepage = "https://github.com/Semantic-Infrastructure-Lab/tiacad"
Documentation = "https://github.com/Semantic-Infrastructure-Lab/tiacad"
Repository = "https://github.com/Semantic-Infrastructure-Lab/tiacad"
"Bug Tracker" = "https://github.com/Semantic-Infrastructure-Lab/tiacad/issues"

[project.scripts]
tiacad = "tiacad_core.cli:main"

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.pytest.ini_options]
# Single source of truth for pytest config. (A legacy pytest.ini used to
# shadow this block entirely — pytest.ini takes precedence when both exist —
# so this config was silently dead. pytest.ini was removed 2026-07-10 and its
# full marker set folded in here.)
testpaths = ["tiacad_core/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
console_output_style = "progress"
addopts = [
    "--verbose",
    "--strict-markers",
    "--tb=short",
]
markers = [
    # Core test categories
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (slower, multi-component)",
    # Correctness test categories (v3.1)
    "attachment: Tests verifying attachment correctness between parts",
    "rotation: Tests verifying rotation correctness and orientation",
    "dimensions: Tests verifying dimensional accuracy (size, volume, surface area)",
    "visual: Visual regression tests (comparison against reference images)",
    # Performance and stress test categories
    "stress: Stress tests (large assemblies, many operations)",
    "golden: Golden master tests (reference comparisons)",
    "slow: Slow-running tests (> 5 seconds)",
    # Feature-specific markers
    "parser: Tests for YAML parser and builders",
    "spatial: Tests for spatial reference resolution",
    "backend: Tests for geometry backend implementations",
    "validation: Tests for validation rules",
]

[tool.coverage.run]
source = ["tiacad_core"]
omit = [
    "*/tests/*",
    "*/examples/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
precision = 2
show_missing = true
